--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "acquia/pingdom-api",
+    "name": "eduha/pingdom-api",
     "description": "A PHP library for interacting with the Pingdom REST API.",
     "license": "MIT",
     "authors": [
